# azangara-mod

./: CMakeLists.txt  README.md  README_EN.md  build.bat
.github/workflows/: release.yml
src/: main.cpp
src/memory/: Memory.h
src/proxy/: TextShaping.cpp  TextShaping.def
